2013-11-11  Dario Rodriguez <dario@artica.es>

	* images/products/*
	images/objects/*: Replaced icons with new style.

2013-11-11  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/setup/offline_update.php: Fixed some errors.

	* include/functions_incidents.php: Now the incidents can
	be sorted by priority.

	* operation/incidents/incident_search_logic.php: Fixed an
	input. Improved the javascript function "changeIncidentOrder".

	* operation/search.php: Now the global search shows the
	invoices.

	* operation/leads/lead_detail.php: Fixed an input.

	* include/ajax/header.php: Now the crontask alert has a
	better formatting.

	* include/functions_ui.php: Updated the functions
	"ui_print_message", "ui_print_error_message",
	"ui_print_success_message" and "ui_print_result_message"
	with an option to enable or disable the cancel button.

2013-11-08  Dario Rodriguez <dario@artica.es>

	* include/functions_db.php: Fixed a wrong
	translation related to inventory change auditory.

2013-11-08  Dario Rodriguez <dario@artica.es>

	* include/functions_inventories.php,
	operation/inventories/inventory_detail.php: Fixed a 
	wrong translation.

2013-11-07  Dario Rodriguez <dario@artica.es>

	* include/js/integria_inventory.js: Fixed a problem 
	with external table popup which doesn't update 
	inventory information.

2013-11-07  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_detail.php,
	operation/incidents/incident_dashboard_detail.php: Fixed a 
	style bug related to incident title.

2013-11-07  Dario Rodriguez <dairo@artica.es>

	* index.php: Fixed a problem generating PDFs
	for invoices.

2013-11-06  Dario Rodriguez <dario@artica.es>

	* operation/users/user_spare_workunit.php: Fixed an typo.

2013-11-06 Vanessa Gil <vanessa.gil@artica.es>

	* general/password_recovery.php
	  include/functions_db.php
	  include/functions_workunits.php
	  operation/building/building_detail.php
	  operation/companies/company_detail.php